# minimal-vulkan-compute-shader

./: README
minimal-example/: CMakeLists.txt  compile_shaders.sh  simplest.comp  simplest.cpp
