cmake_minimum_required(VERSION 3.10.2)
set(CMAKE_BUILD_TYPE Debug)
project(simplest)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(Vulkan REQUIRED)
include_directories(${Vulkan_INCLUDE_DIR})
add_executable(simplest simplest.cpp)
target_link_libraries(simplest Vulkan::Vulkan)
